--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body class="is-preload">
 
     <header id="header">
-        <h1><strong>ORIGABOOK</strong> <a href="https://twitter.com/sylvainmartin44" target="_blank">BY SMARTINUS - 2019</a></h1>
-
+        <h1><strong>ORIGABOOK</strong> <a target="_blank" href="https://twitter.com/sylvainmartin44">BY SMARTINUS - 2019</a></h1>
     </header>
 
     <!-- Wrapper -->
@@ -384,8 +383,6 @@
         </div>
 
     </div>
-
-    <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.poptrox.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
