--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="is-preload">
 
     <header id="header">
-        <h1><strong>ORIGABOOK</strong> <a target="_blank" href="https://twitter.com/sylvainmartin44">BY SMARTINUS - 2019</a></h1>
+        <h1><strong>ORIGABOOK</strong> <a target="_blank" href="https://twitter.com/sylvainmartin44">BY SMARTINUS - 2019</a> - <em>Merci aux origamistes qui ont plié ces chef-d'oeuvres !</em></h1>
     </header>
 
     <!-- Wrapper -->
